--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <body>
     <main>
       <h1>
-        Bientôt l'arrivée du notre site du groupe iIngénierie des Systèmes
-        d'Informations
+        Votre site sera prêt à partir du lundi matin
       </h1>
-      <p>N'arretez Jamais d'apprendre...</p>
+      <p>Alors créez déjà votre compte mail.........<a href="https://mycodebusness.vercel.app/">cliquez ici pour voir le prochain site<p></p>
       <div class="countdown">
         <div class="countdown-item days"></div>
         <div class="countdown-item hours"></div>
@@ -21,7 +20,7 @@
         <div class="countdown-item seconds"></div>
       </div>
       <br />
-      <div>Une présentation de Mr le necessaire</div>
+      <div> <span> jetez un oeil sur le nouveau site</span> </div>
     </main>
   </body>
 </html>
